testsuite/tests/typecheck/should_fail/T17284.hs
{-# LANGUAGE MonomorphismRestriction #-}
{-# LANGUAGE PartialTypeSignatures #-}

module MonoPoly where

f :: Num a => a -> _
f x = x + y

y = f 1
